--- a/gallery.css
+++ b/gallery.css
@@ -1,5 +1,5 @@
 body {
-    background: white;
+    background: pink;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: normal;
@@ -21,13 +21,14 @@ body {
 #navigation li {
 	display: inline;
 	list-style: none;
-	margin: 0;
+	margin: 135px;
 	padding: 0 19px;
-    text-align: center;
+    text-align: end;
+    
 }
 
 #navigation li a {
-    color: #252525;
+    color: palevioletred;
 	display: inline-block;
 	font-family: "Arial Black", Gadget, sans-serif;
 	font-size: 14px;
@@ -42,8 +43,23 @@ body {
     display: block;
     margin: auto;
     text-align: center;
-    color: palevioletred;
+    color: white;
     text-transform: uppercase;
-    background-color: black;
+    background-color: palevioletred;
 }
 
+
+#body ul li {
+    margin: 5 166px;
+    border: 5px solid palevioletred;
+    float: left;
+    width: 300px;
+    height: 299px;
+    display: block;
+    list-style-type: disc;
+    padding: 0 0 30px;
+}
+#body ul li img {
+    width: 300px;
+    height: 289px;
+}
