--- a/about.css
+++ b/about.css
@@ -1,21 +1,50 @@
-body{
-    background: #DEB6AB;
+body {
+    background: #dfc3bc;
 }
-.border1{
-    border: 2px solid #AC7088;
+
+#header img {
+    display: flex;
+    margin: auto;
+    border-radius: 50%;
 }
-.border2 {
-    border: 2px solid #AC7088;
+
+#header ul {
+    text-align: center;
 }
-.main-container{
-    height: 100%;
+
+#header ul li {
+    display: inline;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
 }
-header {
-    height: 150px;
+
+#header ul li a {
+    color: white;
+    background-color: salmon;
+    display: inline-block;
+    font-size: 23px;
+    padding: 0 19px;
+    font-weight: normal;
 }
-section {
-    height: 350px;
+
+#body h1 {
+    text-align: center;
+    color: salmon;
+    font-weight: bolder;
+    background-color: white;
 }
-section:nth-child(2){
-    height: 280px;
+
+#body h2 img {
+    text-align: center;
+    margin: auto;
+    padding: 10px 10px 10px;
+}
+
+#body h3 {
+    text-align: center;
+    padding: 10px 10px 10px;
+    margin: 2%;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
 }
